--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 clip==1.0
 easydict==1.9
 matplotlib==3.5.2
-numpy==1.22.4
+numpy==1.23.0
 opencv_python==4.6.0.66
 Pillow==9.1.1
 PyYAML==6.0
 scipy==1.8.1
 tensorflow==2.9.1
-torch==1.11.0+cu113
+torch==1.11.0
 tqdm==4.64.0
