--- a/config/demo.yaml
+++ b/config/demo.yaml
@@ -1,6 +1,6 @@
-image_path: ./examples/test.jpg
+image_path: /Users/gsq/Desktop/Other Photo/Xnip2022-03-10_09-57-42.jpg
 label_path: ./label_test.txt
-max_boxes_to_draw: 50
+max_boxes_to_draw: 20
 min_box_area: 0
 min_rpn_score_thresh: 0.9
 nms_threshold: 0.5
